--- a/src/templates/ui-grid/ui-grid-menu-button.html
+++ b/src/templates/ui-grid/ui-grid-menu-button.html
@@ -3,9 +3,9 @@
        ui-grid-one-bind-id-grid="'grid-menu'"
        class="ui-grid-icon-container"
        ng-click="toggleMenu()"
-       aria-haspopup="true">
-    <i class="ui-grid-icon-menu"
-       ui-grid-one-bind-aria-label="i18n.aria.buttonLabel">&nbsp;</i>
+       aria-haspopup="true"
+       ui-grid-one-bind-aria-label="i18n.aria.buttonLabel">
+    <i class="ui-grid-icon-menu" ui-grid-one-bind-aria-label="i18n.aria.buttonLabel">&nbsp;</i>
   </div>
   <div ui-grid-menu menu-items="menuItems"></div>
 </div>
