Updated to ui-grid 3.2.1 and applied custom code from RC.3.1.0

--- a/src/templates/ui-grid/ui-grid-menu-button.html
+++ b/src/templates/ui-grid/ui-grid-menu-button.html
@@ -3,7 +3,8 @@
        ui-grid-one-bind-id-grid="'grid-menu'"
        class="ui-grid-icon-container"
        ng-click="toggleMenu()"
-       aria-haspopup="true">
+       aria-haspopup="true"
+       ui-grid-one-bind-aria-label="i18n.aria.buttonLabel">
     <i class="ui-grid-icon-menu"
        ui-grid-one-bind-aria-label="i18n.aria.buttonLabel">&nbsp;</i>
   </div>
